tests/tokenizer/string_unknown_escape.expected
<string>:1:1: error: unknown escape sequence: \x
"unknown escape: \x"
^^^^^^^^^^^^^^^^^^
